# conductor

./: README.md  conductor.py  pyproject.toml
conductor/: __init__.py  accessors.py  conductor.py  configuration.py  rendering.py  routing.py
testapp/: example_renderer.py  example_router.json  form.py  other.py  router.json  test.py  testapp.py
testapp/templates/: form.html  index.html  other.html  test.html
